# WorldFoundry

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml
docs/fumadocs/: .gitignore  next.config.mjs  package.json  source.config.ts  tsconfig.json
docs/fumadocs/app/: global.css  layout.tsx
docs/fumadocs/app/(home)/: page.tsx
docs/fumadocs/app/(home)/blog/: page.tsx
docs/fumadocs/components/: benchmark-identity-mark.tsx  benchmark-recipe-catalog.tsx  blog-shell.tsx  catalog-coverage.tsx  docs-inline-toc.tsx  docs-page-actions.tsx  docs-page.tsx  docs-scroll-bridge.tsx  docs-sidebar-api-tree.tsx  docs-sidebar-nav-tree.tsx  docs-tabs.tsx  docs-toc-link.tsx  docs-toc-links.tsx  docs-toc-rail.tsx  docs-welcome-acknowledgements.tsx  docs-welcome-hero.tsx  docs-welcome-workflow.tsx  ecosystem-page.tsx  home-hero-media.tsx  home-run-configurator.tsx  mdx.tsx  model-command-builder.tsx  model-identity-mark.tsx  model-recipe-catalog.tsx  model-recipe-header.tsx  model-recipe-page.tsx  provider.tsx  python-api-reference.tsx  search.tsx  site-nav.tsx  worldfoundry-system-map.tsx
docs/fumadocs/content/docs/: index.mdx  index.zh.mdx  meta.json  quickstart.mdx  quickstart.zh.mdx
docs/fumadocs/content/docs/api-reference/: contracts.mdx  contracts.zh.mdx  core-acceleration-memory.mdx  core-acceleration-memory.zh.mdx  core-attention.mdx  core-attention.zh.mdx  core-configuration.mdx  core-configuration.zh.mdx  core-distributed.mdx  core-distributed.zh.mdx  core-foundations.mdx  core-foundations.zh.mdx  core-io-media.mdx  core-io-media.zh.mdx  core-model-loading.mdx  core-model-loading.zh.mdx  core-nn-math.mdx  core-nn-math.zh.mdx  core-runtime.mdx  core-runtime.zh.mdx  core.mdx  core.zh.mdx  index.mdx  index.zh.mdx  meta.json  meta.zh.json  metrics-tasks.mdx  metrics-tasks.zh.mdx  models.mdx  models.zh.mdx  reporting.mdx  reporting.zh.mdx  runs.mdx  runs.zh.mdx  runtime.mdx  runtime.zh.mdx
docs/fumadocs/content/docs/evaluation/: index.mdx  index.zh.mdx
docs/fumadocs/content/docs/guides/: add-model.mdx  add-model.zh.mdx  local-assets.mdx  local-assets.zh.mdx  studio.mdx  studio.zh.mdx  tui.mdx  tui.zh.mdx
docs/fumadocs/content/docs/overview/: capabilities.mdx  capabilities.zh.mdx  design.mdx  design.zh.mdx  index.mdx  index.zh.mdx  meta.json  meta.zh.json  why-worldfoundry.mdx  why-worldfoundry.zh.mdx
docs/fumadocs/content/docs/reference/: cli.mdx  cli.zh.mdx  environments.mdx  environments.zh.mdx  meta.json  validation.mdx  validation.zh.mdx
docs/fumadocs/lib/: benchmark-catalog-status.json  benchmark-catalog.ts  blog.ts  brand-font.ts  catalog-coverage-data.json  catalog-coverage.ts  docs-api-toc.tsx  docs-navigation.ts  docs-sidebar.ts  docs-toc-scroll-spy.tsx  docs-toc-visibility.ts  model-logo-map.json  model-recipe-index.ts  model-recipe-types.ts  model-recipes-data.json  model-recipes-index.json  model-recipes.ts  site-links.ts  source.ts  upstream-acknowledgements-data.json  upstream-acknowledgements.ts  use-docs-toc-items.ts  use-docs-toc-visibility.ts
docs/fumadocs/scripts/: api_symbol_intros.py  capture-cli-screenshots.py  dev-local-ssd.sh  generate-catalog-coverage.py  generate-model-recipes.py  generate-python-api.py  generate-upstream-acknowledgements.py  serve-static.mjs
requirements/: worldfoundry-unified.txt
scripts/: download_hfd_models.sh
scripts/inference/: prepare_model_infer.sh
scripts/setup/: conda_install.sh  link_hf_checkpoints.sh  materialize_workspace_demo_assets.py  model_env_install.sh
scripts/workspace/: run_workspace.sh
worldfoundry/cli/: evaluation_intents.py  help.py  main.py  model_run.py  models.py  preflight.py  tui.py  tui_app.py  tui_app.tcss  tui_discovery.py  zoo.py
worldfoundry/data/: io.py
worldfoundry/data/benchmarks/assets/physical-ai-bench/: evaluator.yaml
worldfoundry/data/benchmarks/assets/physics-iq/: sample_results.csv
worldfoundry/data/benchmarks/assets/physics-iq-verified/: sample_results.csv
worldfoundry/data/benchmarks/assets/videophy2/: sample_results.csv
worldfoundry/data/benchmarks/assets/worldbench/: evaluator.yaml  sample_results.csv
worldfoundry/data/benchmarks/assets/worldreasonbench/: pairwise_eval.jsonl  pointwise_eval.induced_pairs.jsonl  pointwise_eval.jsonl  summary.json
worldfoundry/data/benchmarks/assets/wrbench/: sample_results.csv
worldfoundry/data/benchmarks/catalog/embodied/: larybench.yaml
worldfoundry/data/benchmarks/catalog/video/: 4dworldbench.yaml  aigcbench.yaml  camerabench.yaml  chronomagic-bench.yaml  devil-dynamics.yaml  evalcrafter.yaml  ewmbench.yaml  fetv.yaml  genai-bench.yaml  ipv-bench.yaml  iworld-bench.yaml  memobench.yaml  mirabench.yaml  phyeduvideo.yaml  phyfps-bench-gen.yaml  phygenbench.yaml  phyground.yaml  physical-ai-bench.yaml  physics-iq-verified.yaml  physics-iq.yaml  physvidbench.yaml  t2v-compbench.yaml  t2v-safety-bench.yaml  t2vworldbench.yaml  vbench-2.0.yaml  vbench-plus-plus.yaml  vbench.yaml  video-bench.yaml  videophy.yaml  videophy2.yaml  videoscience-bench.yaml  videoscore.yaml  videoverse.yaml  visual-chronometer.yaml  vmbench.yaml  wbench.yaml  world-in-world.yaml  worldarena.yaml  worldbench.yaml  (+4 more)
worldfoundry/data/benchmarks/runtime_profiles/: defaults.yaml
worldfoundry/evaluation/: __init__.py  framework.py  runner.py
worldfoundry/evaluation/models/pipelines/: invocation.py  loading.py
worldfoundry/evaluation/models/runners/: pipeline.py  resolver.py
worldfoundry/evaluation/models/runtime/: profiles.py
worldfoundry/evaluation/reporting/: __init__.py  comparison_identity.py  run_comparison.py  run_index.py  run_manifest.py  run_report.py  scorecard.py  validation.py
worldfoundry/evaluation/tasks/catalog/: schema.py
worldfoundry/evaluation/tasks/contracts/: __init__.py  external.py
worldfoundry/evaluation/tasks/datasets/: manager.py
worldfoundry/evaluation/tasks/embodied/: merge_results.py  orchestrator.py
worldfoundry/mcp/: __main__.py  client.py  server.py
worldfoundry/mcp/tools/: __init__.py  context.py  discovery.py  registration.py  runs.py  server_info.py
(+350 files in other folders)
